Se agrego el funcionamiento del nav

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Atracciones</a></li>
-                    <li><a href="#">Informacion basica</a></li>
+                    <li><a href="#Inicio">Inicio</a></li>
+                    <li><a href="#Atracciones">Atracciones</a></li>
+                    <li><a href="#Informacion">Informacion basica</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,7 +41,7 @@
 
     <section class="turismo">
 
-        <div class="turismo-content container">
+        <div class="turismo-content container" id="Inicio">
             <img src="images/RumaniaPais.png" alt="bandera-rumania" class="bandera-img">
             <h2>Atracciones turísticas más importantes</h2>
             <p class="txt-parrafo">
@@ -55,7 +55,7 @@
             </p>
 
             <div class="turismo-group">
-                <div class="Atraccion">
+                <div class="Atraccion" id="Atracciones">
                     <img src="images/CastilloBran.png" alt="Castillo de Bran">
                     <h3>Castillo de Bran</h3>
                     <p class="txt-parrafo">
@@ -91,7 +91,7 @@
         </div>
     </section>
 
-    <main class="Rumania-Informacion">
+    <main class="Rumania-Informacion" id="Informacion">
 
         <div class="Informacion-content container">
             <h2>Informacion principal de Rumania</h2>
